Fixed community block

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -556,18 +556,10 @@
 }
 
 #community_block .more-information > div >div > em {
-    font-family: "Volkhov";
     color: #fff;
     font-size: 34px;
     font-style: normal;
     line-height: 40px;
-}
-
-#community_block .more-information span {
-    display: block;
-    color: #ff9300;
-    font-size: 17px;
-    margin-top: 3px;
 }
 
 #community_block .more-information .details-box {
@@ -582,111 +574,11 @@
 }
 
 #community_block p {
-    margin-top: 26px;
+    margin-top: 10px;
     color: #fff;
     font-size: 16px;
     line-height: 23px;
     text-align: left;
+    padding: 5px;
 }
 
-#community_block .more-information .image, #community-block .more-information .description {
-    max-width: 402px;
-}
-
-#community_block .more-information .details-box .description {
-    padding: 12px 23px;
-}
-
-#community_block .more-information .details-box > div {
-    padding: 0;
-}
-#community_block .more-information .image, #community_block.more-information .description {
-    max-width: 402px;
-}
-
-#community_block .more-information .image, #community_block.more-information .description p {
-    color: #fff;
-    font-size: 16px;
-    line-height: 23px;
-    text-align: left;
-}
-
-#community_block .more-information .details-box .button {
-    color: #fff;
-    display: inline-block;
-    font-size: 14px;
-    font-weight: 400;
-    padding: 8px 14px;
-    text-align: center;
-    text-transform: uppercase;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    background-color: #ff9300;
-}
-
-#community_block .subscribe {
-    max-width: 402px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.subscribe {
-    margin-bottom: 32px;
-}
-
-#community_block h2, #community_block h2 em {
-    color: #fff;
-}
-
-.subscribe h2, .translations h2, .share-block h2 {
-    font-size: 18px;
-    margin-top: 0;
-    margin-bottom: 15px;
-    font-weight: 100;
-    line-height: 23px;
-}
-
-#community_block .subscribe form {
-    width: 400px;
-    margin: auto;
-}
-.subscribe form {
-    position: relative;
-}
-
-#community_block .subscribe form input {
-    background-color: #252525;
-    padding: 8px 10px 7px;
-}
-.subscribe form input {
-    width: 100%;
-    border: 1px solid #999;
-    font-size: 16px;
-    color: #999;
-    font-weight: 100;
-    padding: 7px 10px;
-    -webkit-appearance: none;
-    -webkit-border-radius: 0px;
-}
-
-.subscribe form .button {
-    background: #fd9400;
-    bottom: 0px;
-    position: absolute;
-    right: 0px;
-    top: 0px;
-    width: 42px;
-    height: 42px;
-    color: #fff;
-    border: none;
-    padding: 0;
-}
-
-.subscribe form .button i {
-    color: #fff;
-    position: relative;
-    top: 5px;
-    font-size: 12px;
-    left: 1px;
-}
