--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -582,3 +582,31 @@
     padding: 5px;
 }
 
+#global-search-input-box {
+    border-color: #ccc;
+    border-style: solid;
+    border-width: 0 0 1px;
+    color: #aaa;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 35px;
+    padding-bottom: 6px;
+    width: 500px;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+    outline: none;
+    background-color: transparent;
+
+}
+
+.searchButton {
+    background-color: #ff9300;
+    color: #fff;
+    font-size: 18px;
+    padding: 8px 26px;
+    text-transform: none;
+    border: none;
+    font-weight: 400;
+    -webkit-appearance: none;
+    -webkit-border-radius: 0px;
+}
