--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -1,8 +1,17 @@
 extends ../layouts/default
 
 block content
+	#searchDiv.container(style='display:none;margin-top:85px;')
+		.row
+			.col-md-12
+				center
+					form(method="GET" action='https://pcaarrd-km.herokuapp.com')
+						input#global-search-input-box(type='text', placeholder='Search news, fiesta, technologies', name='search', autofocus='')
+						input.searchButton(type='submit', border='0', value='Search')
+			
+		
 	//- Dynamic Slider from the database
-	.container(style="margin-top:85px;").no-padding
+	#carousel.container(style="margin-top:85px;").no-padding
 		#myCarousel.carousel.slide(data-ride='carousel')
 			//- Carousel indicators were declared here
 			ol.carousel-indicators
