--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -124,7 +124,7 @@ block content
 		.row
 			.col-md-12
 				center
-					img.img-responsive(src='/images/fiesta_cover.png', alt='Image' width="1300px;" height="200px;")
+					img.img-responsive(src='/images/fiesta.jpg', alt='Image' width="1300px;" height="200px;")
 		.container
 			.row(style="margin-bottom:30px")
 				//- .col-md-12
