Redirected search to global search function

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -5,8 +5,8 @@ block content
 		.row
 			.col-md-12
 				center
-					form(method="GET" action='https://pcaarrd-km.herokuapp.com')
-						input#global-search-input-box(type='text', placeholder='Search news, fiesta, technologies', name='search', autofocus='')
+					form(method="GET" action='/search')
+						input#global-search-input-box(type='text', placeholder='Search news, fiesta, technologies', name='searchKey', autofocus='')
 						input.searchButton(type='submit', border='0', value='Search')
 			
 		
