--- a/public/styles/community/community.less
+++ b/public/styles/community/community.less
@@ -1,3 +1,17 @@
 .community-body {
   margin-top: 85px;
 }
+
+
+.red {
+  background-color: red
+}
+
+
+.blue {
+  background-color: blue;
+}
+
+.green {
+  background-color: green;
+}
