Added nav bar for community

--- a/public/styles/community/community.less
+++ b/public/styles/community/community.less
@@ -2,16 +2,47 @@
   margin-top: 85px;
 }
 
+#community-nav {
+  height: 45px;
+  background-color:#3062B7;
 
-.red {
-  background-color: red
+}
+
+.community-breadcrumb {
+  background-color: unset;
+  padding: 10px 15px 9px 15px;
+  float: left;
+}
+
+.community-breadcrumb li a {
+  color: #FBFBFB;
+  text-transform: uppercase;
+}
+
+.community-breadcrumb li a:hover {
+  color: #c3d8f7;
+}
+
+.community-breadcrumb li:last-child {
+  color: #FBFBFB;
+  text-transform: uppercase;
+}
+
+#user-login-links {
+  float: right;
+  padding: 10px 15px 9px 15px;
+  color: #FBFBFB;
+}
+
+.login-link {
+  color: #FBFBFB;
+}
+
+.login-link:hover {
+  color: #c3d8f7;
 }
 
 
-.blue {
-  background-color: blue;
-}
-
-.green {
-  background-color: green;
+.container.margin-top {
+  margin-top: 20px;
 }
