--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -1,11 +1,41 @@
-extends ../../layouts/default
+extends ../../layouts/community
 
 block content
+
   .community-body
-    .container
+    //- NAVBAR
+    div#community-nav
+      ol.breadcrumb.community-breadcrumb
+        li
+          a(href="/") Home
+        li
+          | Community
+
+      #user-login-links
+        if user
+          //- if user.canAccessKeystone
+            //- li: a(href='/keystone') Open Keystone
+          span.user-name #{user.name.full}&nbsp;&nbsp;
+          i.fa.fa-bell-o(aria-hidden="true")&nbsp;&nbsp;&nbsp;&nbsp;
+          a(href='/keystone/signout', class="not-active login-link") Sign Out
+        else
+          a(href='/keystone/signin?from=/community', class="not-active login-link") Sign In
+
+      //- ul.nav.navbar-nav.navbar-right
+      //-   if user
+      //-     if user.canAccessKeystone
+      //-       li: a(href='/keystone') Open Keystone
+      //-     li: a(href='/keystone/signout') Sign Out
+      //-   else
+      //-     li: a(href='/keystone/signin') Sign In
+
+    //- END NAVBAR
+
+
+    .container.margin-top
       .row
         .col-md-5
-          h3 
+          h3
             i.fa.fa-comments-o(aria-hidden='true')
             | &nbsp;Discussion
           hr
@@ -19,7 +49,7 @@ block content
           br
           br
 
-          h3 
+          h3
             i.fa.fa-book(aria-hidden='true')
             | &nbsp;Publications
           hr
@@ -33,7 +63,7 @@ block content
           br
           br
 
-          h3 
+          h3
             i.fa.fa-comments-o(aria-hidden='true')
             | &nbsp;Multimedia
           hr
@@ -47,7 +77,7 @@ block content
           br
 
         .col-md-5
-          h3 
+          h3
             i.fa.fa-graduation-cap(aria-hidden='true')
             | &nbsp;Training
           hr
@@ -61,7 +91,7 @@ block content
           br
           br
 
-          h3 
+          h3
             i.fa.fa-graduation-cap(aria-hidden='true')
             | &nbsp;Blogs
           hr
