Relocated community nav bar code to layout template.

--- a/public/styles/community/community.less
+++ b/public/styles/community/community.less
@@ -1,8 +1,11 @@
 .community-body {
-  margin-top: 85px;
+  /*margin-top: 85px;*/
+  /*130 to accomodate main header (logo + links) and blue community header*/
+  margin-top: 130px;
 }
 
 #community-nav {
+  margin-top: 85px;
   height: 45px;
   background-color:#3062B7;
 
