Displays downloadable publications in eresources

--- a/templates/views/community/community.jade
+++ b/templates/views/community/community.jade
@@ -3,10 +3,7 @@ extends ../../layouts/community
 block content
 
   .community-body
-    
-
-
-    .container.margin-top
+    .container
       .row
         .col-md-5
           h3
