--- a/templates/views/post.jade
+++ b/templates/views/post.jade
@@ -1,29 +1,40 @@
 extends ../layouts/default
 
+include ../mixins/post
+
 block content
-	.container: .row: .col-sm-10.col-sm-offset-1.col-md-8.col-md-offset-2
-		article
-			p: a(href='/blog') &larr; back to the blog
-			hr
-			if !data.post
-				h2 Invalid Post.
-			else
-				header
-					h1= data.post.title
-					h5 Posted 
-						if data.post.publishedDate
-							| on #{data.post._.publishedDate.format('MMMM Do, YYYY')} 
-						if data.post.categories && data.post.categories.length
-							| in 
-							each cat, cat_i in data.post.categories
-								a(href='/blog/' + cat.key)= cat.name
-								if cat_i < data.post.categories.length - 1
-									| , 
-								else
-									|  
-						if data.post.author
-							| by #{data.post.author.name.first}
-				.post
-					if data.post.image.exists
-						.image-wrap: img(src=data.post._.image.fit(750,450)).img-responsive
-					!= data.post.content.full
+	.container(style="margin-top:100px;")
+		if !data.post
+			.jumbotron.text-center
+				h2 Invalid post...
+				p.lead Please check the url and try again
+		else
+			.row
+				.col-md-8.col-md-offset-2
+					p: a(href='/blog').text-muted &larr; back to the news feed
+					hr
+					article
+						header
+							h1= data.post.title
+							if data.post.image.exists
+								div(style="margin-bottom: 20px; margin-top: 20px;")
+									img(src=data.post._.image.fit(750,500)).img-responsive
+							div
+								p.text-muted.text-small Posted 
+									if data.post.publishedDate
+										| on 
+										time(datetime=data.post.publishedDate)=data.post._.publishedDate.format('MMMM Do, YYYY')
+									if data.post.categories && data.post.categories.length
+										|  in 
+										each cat, cat_i in data.post.categories
+											a(href='/blog/' + cat.key)= cat.name
+											if cat_i < data.post.categories.length - 1
+												| , 
+											else
+												|  
+									if data.post.author
+										| by #{data.post.author.name.full}
+							hr
+							!= data.post.content.full
+					
+
