Updated the link for google forms

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -420,7 +420,7 @@ block content
 						center
 							h2 Community
 							h4 Join the conversation. Know more about the country’s agriculture and aquaculture natural resources.
-							a(href="#")
+							a(href="https://docs.google.com/forms/d/15q4z6gcBt51RZpKc_9MWFsKHlXq8PAMoCMKDXKI5tdw/edit" target="_blank")
 								button(class="btn btn-lg btn-warning") Join us by filling up this form!
 
 	#community_block
