--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -5,7 +5,7 @@ block content
 		.row
 			.col-md-12
 				center
-					form(method="GET" action='/search')
+					form(method="GET" action='/search' target='_blank')
 						input#global-search-input-box(type='text', placeholder='Search news, fiesta, technologies', name='searchKey', autofocus='')
 						input.searchButton(type='submit', border='0', value='Search')
 
