Moved grid and list to their own files

--- a/public/styles/community/eresources.less
+++ b/public/styles/community/eresources.less
@@ -8,22 +8,20 @@
   color: #515151;
 }
 
-.publication-thumbnail {
 
-}
-
-.publication-col {
+/* GRID STYLE */
+.publication-col-grid {
   text-align: center;
 }
 
-.publication-col .cover {
+.publication-col-grid .cover {
   margin: 0 auto;
   width: 100px;
   height: 180px;
   position: relative;
 }
 
-.publication-col .cover img {
+.publication-col-grid .cover img {
   position: absolute;
   bottom: 0;
   margin-left: auto;
@@ -32,6 +30,30 @@
   right: 0;
 }
 
-.publication-col .title {
+.publication-col-grid .title {
   height: 50px;
+}
+
+/* LIST STYLE */
+.publication-col-list {
+  height: 180px;
+  /*display: block;
+  padding: 4px;
+  margin-bottom: 20px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: border .2s ease-in-out;
+  -o-transition: border .2s ease-in-out;
+  transition: border .2s ease-in-out;*/
+}
+
+.publication-col-list .cover {
+  float: left;
+  margin-right: 20px;
+}
+
+.publication-col-list .details {
+
 }
