--- a/public/styles/community/eresources.less
+++ b/public/styles/community/eresources.less
@@ -37,23 +37,30 @@
 /* LIST STYLE */
 .publication-col-list {
   height: 180px;
-  /*display: block;
-  padding: 4px;
-  margin-bottom: 20px;
-  line-height: 1.42857143;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  -webkit-transition: border .2s ease-in-out;
-  -o-transition: border .2s ease-in-out;
-  transition: border .2s ease-in-out;*/
 }
 
 .publication-col-list .cover {
   float: left;
-  margin-right: 20px;
+  /*margin-right: 20px;*/
+  height: 180px;
+  width: 135px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.publication-col-list .cover img {
+  position: absolute;
+  bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
 }
 
 .publication-col-list .details {
 
+}
+
+.publication-meta {
+  margin-top: 15px;
 }
