Added Grid and List view to publications

--- a/public/styles/community/eresources.less
+++ b/public/styles/community/eresources.less
@@ -37,14 +37,15 @@
 /* LIST STYLE */
 .publication-col-list {
   height: 180px;
+  padding: 10px;
 }
 
 .publication-col-list .cover {
   float: left;
   /*margin-right: 20px;*/
-  height: 180px;
-  width: 135px;
-  margin: 0 auto;
+  height: 100%;
+  width: 120px;
+  margin-right: 10px;
   position: relative;
 }
 
@@ -58,9 +59,15 @@
 }
 
 .publication-col-list .details {
-
+  height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 .publication-meta {
   margin-top: 15px;
+}
+
+#publications-filter {
+  padding-top: 8px;
 }
