--- a/templates/views/community/eresources.jade
+++ b/templates/views/community/eresources.jade
@@ -7,6 +7,23 @@ block content
       .container
         .row
           .col-md-9
+            nav.navbar.navbar-default
+              .container-fluid
+                //- Mobile menu
+                .navbar-header
+                  button(type="button", data-toggle="collapsed", aria-expanded="false", data-target="#publicatons-filter").navbar-toggle.collapsed
+                    span.sr-only Toggle navigation
+                    span.icon-bar
+
+                .collapse.navbar-collapse#publications-filter
+                  a(href="/eresources?view=grid")
+                    button(type="button",aria-label="Grid View").btn.btn-default
+                      span(aria-hidden="true").glyphicon.glyphicon-th
+                  a(href="/eresources?view=list")
+                    button(type="button",aria-label="List View").btn.btn-default
+                      span(aria-hidden="true").glyphicon.glyphicon-th-list
+
+
             block publications
 
           .col-md-3
