--- a/public/styles/site.less
+++ b/public/styles/site.less
@@ -26,4 +26,4 @@
 // Add your own site style includes here
 @import "site/layout.less";
 @import "community/community.less";
-@import "community/eresources.less";
+@import "eresources/eresources.less";
