--- a/templates/views/eresources/eresources.jade
+++ b/templates/views/eresources/eresources.jade
@@ -11,17 +11,47 @@ block content
               .container-fluid
                 //- Mobile menu
                 .navbar-header
-                  button(type="button", data-toggle="collapsed", aria-expanded="false", data-target="#publicatons-filter").navbar-toggle.collapsed
+                  button(type="button", data-toggle="collapse", aria-expanded="false", data-target="#publications-filter").navbar-toggle.collapsed
                     span.sr-only Toggle navigation
                     span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+                  //- a(href="#").navbar-brand Brand?
 
-                .collapse.navbar-collapse#publications-filter
-                  a(href="/eresources?view=grid")
-                    button(type="button",aria-label="Grid View").btn.btn-default
-                      span(aria-hidden="true").glyphicon.glyphicon-th
-                  a(href="/eresources?view=list")
-                    button(type="button",aria-label="List View").btn.btn-default
-                      span(aria-hidden="true").glyphicon.glyphicon-th-list
+                #publications-filter.collapse.navbar-collapse
+                  ul.nav.navbar-nav
+
+                    //- li
+                      a(href='#') Link
+                    //- li.dropdown
+                      a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-haspopup='true', aria-expanded='false')
+                        | All
+                        span.caret
+                      ul.dropdown-menu
+                        li
+                          a(href='#') Title
+                        li
+                          a(href='#') Another action
+                        li
+                          a(href='#') Something else here
+                        li.divider(role='separator')
+                        li
+                          a(href='#') Separated link
+                        li.divider(role='separator')
+                        li
+                          a(href='#') One more separated link
+
+                  form.navbar-form.navbar-left
+                    .form-group
+                      input.form-control(type='text', placeholder='Search')
+                    button.btn.btn-default(type='submit') Submit
+                  ul.nav.navbar-nav.navbar-right
+                    li
+                      a(href="/eresources?view=grid")
+                        span(aria-hidden="true").glyphicon.glyphicon-th
+                    li
+                      a(href="/eresources?view=list")
+                        span(aria-hidden="true").glyphicon.glyphicon-th-list
 
 
             block publications
