Remove more news from home page

--- a/templates/views/index.jade
+++ b/templates/views/index.jade
@@ -36,7 +36,6 @@ block content
 									div(class="carousel-caption")
 										a(href='/blog/post/' + image.slug).news-link 
 											!= image.caption
-								a(class="btn btn-primary more-news" href="blog") Click Here For More News
 										//- i.fa.fa-newspaper-o.fa-fw
 									//- if image.buttonText != ""
 										a(class="btn btn-lg btn-primary" href="#" role="button")= image.buttonText
@@ -49,7 +48,7 @@ block content
 									div(class="carousel-caption")
 										a(href='/blog/post/' + image.slug).news-link 
 											!= image.caption
-								a(class="btn btn-primary more-news" href="blog") Click Here For More News
+								//- a(class="btn btn-primary more-news" href="blog") Click Here For More News
 
 
 			//- left amd right arrows
