--- a/templates/views/post.jade
+++ b/templates/views/post.jade
@@ -11,7 +11,7 @@ block content
 		else
 			.row
 				.col-md-8.col-md-offset-2
-					p: a(href='/blog').text-muted &larr; back to the news feed
+					p: a(href='/blog').text-muted &larr; go to the news feed
 					hr
 					article
 						header
